--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
     <script src="main.js" defer></script>
     <script src="states.js"></script>
     <script src="customers.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Customer Directory</title>
 </head>
 <body>
     <h1>Customer Directory</h1>
     <div id="mainContainer"></div>
-    <!-- <div class="customer">
-        <h2>Krin Oliver</h2>
-        <p>krin.oliver@example.com</p>
-        <p>9294 Stevens Creek Blvd Hampton, NV 48932</p>
-        <p>DOB: Jul 22, 1965</p>
-        <p>Customer Since: Jul 28, 2011</p>
-    </div> -->
+    
 </body>
 </html>
